--- a/css/main.css
+++ b/css/main.css
@@ -327,17 +327,12 @@ img {
   letter-spacing: 0.03em;
 }
 
-@media screen and (min-width: 768px) and (max-width: 1199.98px) {
-  .logo--blue {
-    padding-top: 26px;
-    padding-bottom: 26px;
-  }
-}
-
 @media screen and (max-width: 1199.98px) {
   .logo--blue {
     font-size: 24px;
     line-height: 1.16;
+    padding-top: 24px;
+    padding-bottom: 24px;
   }
 }
 
@@ -345,24 +340,36 @@ img {
   .logo--blue {
     font-size: 26px;
     line-height: 1.19;
+    padding-top: 24px;
+    padding-bottom: 24px;
   }
 }
 
 .modal-title {
   font-weight: 700;
   font-size: 20px;
-  line-height: 1.15;
   text-align: center;
   letter-spacing: 0.03em;
   margin-bottom: 12px;
   color: var(--secondary-text-cl);
 }
 
+@media screen and (max-width: 1199.98px) {
+  .modal-title {
+    line-height: 1.5;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .modal-title {
+    line-height: 1.15;
+  }
+}
+
 .modal-form__input {
   width: 100%;
   height: 100%;
   border: none;
-  width: 448px;
   height: 40px;
   padding-left: 42px;
   -webkit-transition: var(--hover-anim);
@@ -470,11 +477,23 @@ img {
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
-  font-size: 14px;
-  line-height: 1.71;
   letter-spacing: 0.03em;
   margin-top: 20px;
   margin-bottom: 30px;
+}
+
+@media screen and (max-width: 1199.98px) {
+  .modal-form__radio {
+    font-size: 12px;
+    line-height: 1.16;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .modal-form__radio {
+    font-size: 14px;
+    line-height: 1.71;
+  }
 }
 
 .modal-form__btn {
@@ -524,14 +543,33 @@ img {
 
 .modal {
   background-color: var(--main-bg-cl);
-  width: 528px;
-  height: 581px;
   position: absolute;
+  padding: 40px;
   left: 50%;
   top: 50%;
   -webkit-transform: translate(-50%, -50%);
           transform: translate(-50%, -50%);
-  padding: 40px;
+}
+
+@media screen and (max-width: 767.98px) {
+  .modal {
+    width: 450px;
+    height: 609px;
+  }
+}
+
+@media screen and (min-width: 768px) and (max-width: 1199.98px) {
+  .modal {
+    width: 450px;
+    height: 609px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .modal {
+    width: 528px;
+    height: 581px;
+  }
 }
 
 .backdrop.is-hidden {
@@ -611,7 +649,7 @@ img {
 
 @media screen and (min-width: 1200px) {
   .header__list {
-    margin-right: 250px;
+    margin-right: 305px;
   }
 }
 
@@ -643,8 +681,16 @@ img {
   }
 }
 
-.header__contact:first-child {
-  margin-right: 30px;
+@media screen and (min-width: 768px) and (max-width: 1199.98px) {
+  .header__contact:first-child {
+    margin-bottom: 10px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .header__contact:first-child {
+    margin-right: 30px;
+  }
 }
 
 .header__item {
@@ -696,6 +742,16 @@ img {
   }
 }
 
+@media screen and (min-width: 1200px) {
+  .header__contacts {
+    font-size: 14px;
+    line-height: 1.14;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+  }
+}
+
 .header__icon {
   fill: currentColor;
   margin-right: 10px;
@@ -706,37 +762,24 @@ img {
 }
 
 .header__portfolio {
-  border-bottom: 1px solid var(--header-color);
+  border-top: 1px solid var(--header-color);
 }
 
 .header__menu {
   fill: currentColor;
+  z-index: 100;
 }
 
-@media screen and (min-width: 768px) and (max-width: 1199.98px) {
-  .header__menu {
-    display: none;
-  }
-}
-
-@media screen and (min-width: 1200px) {
-  .header__menu {
-    display: none;
-  }
+.icon_close {
+  position: fixed;
 }
 
 .header__menu-link {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  background-color: transparent;
+  border: none;
   width: 40px;
   height: 40px;
+  z-index: 100;
   color: var(--color-logo);
 }
 
@@ -745,15 +788,147 @@ img {
 }
 
 @media screen and (min-width: 768px) and (max-width: 1199.98px) {
-  .header__phone:first-child {
-    margin-bottom: 10px;
+  .header__menu-link {
+    display: none;
   }
+}
+
+@media screen and (min-width: 1200px) {
+  .header__menu-link {
+    display: none;
+  }
+}
+
+.header__menu-mobile {
+  display: none;
+  position: fixed;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  padding: 48px 84px 48px 40px;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  background-color: var(--main-bg-cl);
+  z-index: 10;
+  overflow-y: scroll;
+}
+
+.header__menu-mobile.is-open {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+@media screen and (min-width: 768px) and (max-width: 1199.98px) {
+  .header__menu-mobile {
+    display: none;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .header__menu-mobile {
+    display: none;
+  }
+}
+
+.header__menu-link .icon_menu {
+  display: none;
+}
+
+.header__menu-link.is-open .icon_menu {
+  display: block;
+}
+
+.header__menu-link.is-open .icon_close {
+  display: none;
+}
+
+.mobile__close {
+  fill: currentColor;
+}
+
+.mobile_item-navigation {
+  font-weight: 500;
+  font-size: 40px;
+  line-height: 1.18;
+  letter-spacing: 0.02em;
+  color: var(--secondary-text-cl);
+  text-decoration: none;
+}
+
+.mobile_link-navigation:not(:last-child) {
+  margin-bottom: 30px;
+}
+
+.mobile_link-contact:first-child {
+  margin-bottom: 32px;
+}
+
+.mobile_item-tel {
+  text-decoration: none;
+  font-weight: 500;
+  letter-spacing: 0.02em;
+  font-size: 34px;
+  line-height: 1.18;
+  color: var(--accent-color);
+}
+
+.mobile_item-mail {
+  text-decoration: none;
+  font-weight: 500;
+  letter-spacing: 0.02em;
+  font-size: 24px;
+  line-height: 1.6;
+  color: var(--main-text-cl);
+}
+
+.mobile__social {
+  font-weight: 500;
+  font-size: 18px;
+  line-height: 1.22;
+  letter-spacing: 0.02em;
+  color: var(--accent-color);
+  text-decoration: none;
+}
+
+.mobile_list-social {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+.mobile_link-social {
+  position: relative;
+}
+
+.mobile_link-social:not(:last-child) {
+  margin-right: 20px;
+}
+
+.mobile_link-social:not(:last-child)::after {
+  position: absolute;
+  content: '';
+  width: 1px;
+  height: 100%;
+  background-color: rgba(33, 33, 33, 0.2);
+  top: 0;
+  right: -10px;
+}
+
+.mobile_list-contact {
+  margin-top: auto;
+  margin-bottom: 64px;
+}
+
+.mobile_page {
+  color: var(--accent-color);
 }
 
 .hero {
   background-color: var(--accent-bg-color);
-  background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(47, 48, 58, 0.4)), to(rgba(47, 48, 58, 0.4))), url(../img/bg/hero-bg.jpg);
-  background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../img/bg/hero-bg.jpg);
   background-size: cover;
   margin-left: auto;
   margin-right: auto;
@@ -766,6 +941,8 @@ img {
 
 @media screen and (max-width: 767.98px) {
   .hero {
+    background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(47, 48, 58, 0.4)), to(rgba(47, 48, 58, 0.4))), url(/img/bg/Header_m_img.jpg);
+    background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(/img/bg/Header_m_img.jpg);
     max-width: 480px;
     height: 400px;
     padding-top: 118px;
@@ -775,6 +952,8 @@ img {
 
 @media screen and (min-width: 768px) and (max-width: 1199.98px) {
   .hero {
+    background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(47, 48, 58, 0.4)), to(rgba(47, 48, 58, 0.4))), url(/img/bg/Header_t_img.jpg);
+    background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(/img/bg/Header_t_img.jpg);
     max-width: 768px;
     height: 400px;
     padding-top: 118px;
@@ -784,6 +963,8 @@ img {
 
 @media screen and (min-width: 1200px) {
   .hero {
+    background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(47, 48, 58, 0.4)), to(rgba(47, 48, 58, 0.4))), url(../img/bg/hero-bg.jpg);
+    background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../img/bg/hero-bg.jpg);
     max-width: 1600px;
     height: 600px;
     padding-top: 200px;
@@ -1000,6 +1181,9 @@ img {
 }
 
 @media screen and (min-width: 768px) and (max-width: 1199.98px) {
+  .our-team__item {
+    width: 354px;
+  }
   .our-team__item:nth-child(2n + 1) {
     margin-right: 30px;
   }
@@ -1395,12 +1579,6 @@ img {
   background-color: var(--accent-bg-color);
 }
 
-@media screen and (min-width: 768px) and (max-width: 1199.98px) {
-  .footer__adress {
-    margin-left: 26px;
-  }
-}
-
 .footer__list {
   font-style: normal;
   margin-top: 20px;
@@ -1511,6 +1689,22 @@ img {
 @media screen and (max-width: 767.98px) {
   .footer__contacts {
     text-align: center;
+  }
+}
+
+@media screen and (min-width: 768px) and (max-width: 1199.98px) {
+  .footer__contacts {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    margin-left: 76px;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
   }
 }
 
