--- a/scss/components/_modal.scss
+++ b/scss/components/_modal.scss
@@ -1,18 +1,24 @@
 .modal-title {
   font-weight: 700;
   font-size: 20px;
-  line-height: 1.15;
   text-align: center;
   letter-spacing: 0.03em;
   margin-bottom: 12px;
   color: var(--secondary-text-cl);
+
+  @include mq(not-desktop) {
+    line-height: 1.5;
+  }
+  @include mq(desktop) {
+    line-height: 1.15;
+  }
 }
 
 .modal-form__input {
   width: 100%;
   height: 100%;
   border: none;
-  width: 448px;
+
   height: 40px;
   padding-left: 42px;
   transition: var(--hover-anim);
@@ -113,11 +119,19 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  font-size: 14px;
-  line-height: 1.71;
   letter-spacing: 0.03em;
   margin-top: 20px;
   margin-bottom: 30px;
+
+  @include mq(not-desktop) {
+    font-size: 12px;
+    line-height: 1.16;
+  }
+
+  @include mq(desktop) {
+    font-size: 14px;
+    line-height: 1.71;
+  }
 }
 
 .modal-form__btn {
@@ -165,15 +179,26 @@
 
 .modal {
   background-color: var(--main-bg-cl);
-  width: 528px;
-  height: 581px;
   position: absolute;
+  padding: 40px;
   left: 50%;
   top: 50%;
   transform: translate(-50%, -50%);
-  padding: 40px;
-}
 
+  @include mq(mobile-only) {
+    width: 450px;
+    height: 609px;
+  }
+
+  @include mq(tablet-only) {
+    width: 450px;
+    height: 609px;
+  }
+  @include mq(desktop) {
+    width: 528px;
+    height: 581px;
+  }
+}
 .backdrop.is-hidden {
   opacity: 0;
   pointer-events: none;
