--- a/css/main.css
+++ b/css/main.css
@@ -937,12 +937,19 @@ img {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+  background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(47, 48, 58, 0.4)), to(rgba(47, 48, 58, 0.4))), url(/img/bg/hero_bg_m.jpg);
+  background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(/img/bg/hero_bg_m.jpg);
+}
+
+@media (min-device-pixel-ratio: 2), (-webkit-min-device-pixel-ratio: 2), (min-resolution: 192dpi), (min-resolution: 2dppx) {
+  .hero {
+    background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(47, 48, 58, 0.4)), to(rgba(47, 48, 58, 0.4))), url(/img/bg/hero_bg_m@2x.jpg);
+    background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(/img/bg/hero_bg_m@2x.jpg);
+  }
 }
 
 @media screen and (max-width: 767.98px) {
   .hero {
-    background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(47, 48, 58, 0.4)), to(rgba(47, 48, 58, 0.4))), url(/img/bg/Header_m_img.jpg);
-    background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(/img/bg/Header_m_img.jpg);
     max-width: 480px;
     height: 400px;
     padding-top: 118px;
@@ -952,8 +959,8 @@ img {
 
 @media screen and (min-width: 768px) and (max-width: 1199.98px) {
   .hero {
-    background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(47, 48, 58, 0.4)), to(rgba(47, 48, 58, 0.4))), url(/img/bg/Header_t_img.jpg);
-    background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(/img/bg/Header_t_img.jpg);
+    background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(47, 48, 58, 0.4)), to(rgba(47, 48, 58, 0.4))), url(/img/bg/hero_bg_t.jpg);
+    background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(/img/bg/hero_bg_t.jpg);
     max-width: 768px;
     height: 400px;
     padding-top: 118px;
@@ -961,14 +968,28 @@ img {
   }
 }
 
+@media screen and (min-width: 768px) and (max-width: 1199.98px) and (min-device-pixel-ratio: 2), screen and (min-width: 768px) and (max-width: 1199.98px) and (-webkit-min-device-pixel-ratio: 2), screen and (min-width: 768px) and (max-width: 1199.98px) and (min-resolution: 192dpi), screen and (min-width: 768px) and (max-width: 1199.98px) and (min-resolution: 2dppx) {
+  .hero {
+    background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(47, 48, 58, 0.4)), to(rgba(47, 48, 58, 0.4))), url(/img/bg/hero_bg_t@2x.jpg);
+    background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(/img/bg/hero_bg_t@2x.jpg);
+  }
+}
+
 @media screen and (min-width: 1200px) {
   .hero {
-    background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(47, 48, 58, 0.4)), to(rgba(47, 48, 58, 0.4))), url(/img/bg/hero-bg.jpg);
-    background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(/img/bg/hero-bg.jpg);
+    background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(47, 48, 58, 0.4)), to(rgba(47, 48, 58, 0.4))), url(/img/bg/hero_bg_d.jpg);
+    background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(/img/bg/hero_bg_d.jpg);
     max-width: 1600px;
     height: 600px;
     padding-top: 200px;
     padding-bottom: 200px;
+  }
+}
+
+@media screen and (min-width: 1200px) and (min-device-pixel-ratio: 2), screen and (min-width: 1200px) and (-webkit-min-device-pixel-ratio: 2), screen and (min-width: 1200px) and (min-resolution: 192dpi), screen and (min-width: 1200px) and (min-resolution: 2dppx) {
+  .hero {
+    background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(47, 48, 58, 0.4)), to(rgba(47, 48, 58, 0.4))), url(/img/bg/hero_bg_d@2x.jpg);
+    background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(/img/bg/hero_bg_d@2x.jpg);
   }
 }
 
@@ -1000,18 +1021,6 @@ img {
     height: 120px;
     font-size: 44px;
     line-height: 1.36;
-  }
-}
-
-@media screen and (max-width: 1199.98px) {
-  .section__benefits {
-    padding-top: 60px;
-  }
-}
-
-@media screen and (min-width: 1200px) {
-  .section__benefits {
-    padding-top: 94px;
   }
 }
 
@@ -1061,7 +1070,6 @@ img {
 }
 
 .benefits__advantages {
-  width: 270px;
   height: 120px;
   background-color: var(--section-team-color);
   margin-bottom: 30px;
@@ -1074,29 +1082,17 @@ img {
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
-}
-
-@media screen and (max-width: 767.98px) {
-  .benefits__advantages {
-    width: 450px;
-  }
-}
-
-@media screen and (min-width: 768px) and (max-width: 1199.98px) {
-  .benefits__advantages {
-    width: 354px;
-  }
+  width: 100%;
 }
 
 .benefits__item {
   display: block;
-  height: 251px;
+  width: 100%;
 }
 
 @media screen and (max-width: 767.98px) {
   .benefits__item:not(:last-child) {
     margin-bottom: 30px;
-    height: 226px;
   }
 }
 
@@ -1128,7 +1124,6 @@ img {
   line-height: 1.17;
   color: var(--secondary-text-cl);
   letter-spacing: 0.03em;
-  margin-top: 94px;
   text-align: center;
 }
 
@@ -1216,6 +1211,12 @@ img {
 @media screen and (min-width: 768px) and (max-width: 1199.98px) {
   .about {
     display: none;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .about {
+    margin-bottom: 94px;
   }
 }
 
