--- a/scss/loyauts/_main-page-1.scss
+++ b/scss/loyauts/_main-page-1.scss
@@ -7,7 +7,7 @@
   background-position: center;
   align-items: center;
   background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
-    url(/img/bg/hero_bg_m.jpg);
+    url(../../img/bg/hero_bg_m.jpg);
 
   @include mq(retina) {
     background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
@@ -40,6 +40,7 @@
     height: 600px;
     padding-top: 200px;
     padding-bottom: 200px;
+
     @include mq(retina) {
       background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
         url(/img/bg/hero_bg_d@2x.jpg);
