--- a/css/main.css
+++ b/css/main.css
@@ -539,6 +539,7 @@ img {
   z-index: 10;
   -webkit-transition: opacity var(--modal-anim), visibility var(--modal-anim);
   transition: opacity var(--modal-anim), visibility var(--modal-anim);
+  z-index: 101;
 }
 
 .modal {
@@ -800,7 +801,6 @@ img {
 }
 
 .header__menu-mobile {
-  display: none;
   position: fixed;
   width: 100%;
   height: 100%;
@@ -813,25 +813,20 @@ img {
           flex-direction: column;
   background-color: var(--main-bg-cl);
   z-index: 10;
-  overflow-y: scroll;
-}
-
-.header__menu-mobile.is-open {
+  -webkit-transform: translateX(100%);
+          transform: translateX(100%);
+  -webkit-transition: -webkit-transform var(--hover-anim);
+  transition: -webkit-transform var(--hover-anim);
+  transition: transform var(--hover-anim);
+  transition: transform var(--hover-anim), -webkit-transform var(--hover-anim);
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
 }
 
-@media screen and (min-width: 768px) and (max-width: 1199.98px) {
-  .header__menu-mobile {
-    display: none;
-  }
-}
-
-@media screen and (min-width: 1200px) {
-  .header__menu-mobile {
-    display: none;
-  }
+.header__menu-mobile.is-open {
+  -webkit-transform: translateX(0);
+          transform: translateX(0);
 }
 
 .header__menu-link .icon_menu {
@@ -1008,8 +1003,8 @@ img {
 
 @media screen and (max-width: 1199.98px) {
   .hero__title {
-    width: 360px;
-    height: 84px;
+    width: 100%;
+    max-width: 360px;
     font-size: 26px;
     line-height: 1.62;
   }
@@ -1317,15 +1312,76 @@ img {
   }
 }
 
-.clients__list {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -ms-flex-wrap: wrap;
-      flex-wrap: wrap;
+@media screen and (min-width: 320px) and (max-width: 479px) {
+  .clients__list {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
 }
 
 @media screen and (max-width: 767.98px) {
+  .clients__list {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+  }
+}
+
+@media screen and (min-width: 768px) and (max-width: 1199.98px) {
+  .clients__list {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .clients__list {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+  }
+}
+
+@media screen and (min-width: 320px) and (max-width: 479px) {
+  .clients__item {
+    width: 210px;
+  }
+  .clients__item:not(:last-child) {
+    margin-bottom: 30px;
+  }
+}
+
+@media screen and (min-width: 480px) and (max-width: 767px) {
   .clients__item {
     width: 210px;
   }
@@ -1337,21 +1393,31 @@ img {
   }
 }
 
-@media screen and (min-width: 768px) {
+@media screen and (min-width: 768px) and (max-width: 1199.98px) {
   .clients__item {
     width: 226px;
   }
-  .clients__item:not(:nth-child(3n)) {
+  .clients__item:nth-child(-n + 3) {
+    margin-bottom: 30px;
+  }
+  .clients__item:nth-child(1) {
     margin-right: 30px;
   }
-  .clients__item:nth-child(3n) {
-    margin-bottom: 30px;
+  .clients__item:nth-child(2) {
+    margin-right: 30px;
+  }
+  .clients__item:nth-child(4) {
+    margin-right: 30px;
+  }
+  .clients__item:nth-child(5) {
+    margin-right: 30px;
   }
 }
 
 @media screen and (min-width: 1200px) {
   .clients__item {
-    width: 170px;
+    -ms-flex-preferred-size: 170px;
+        flex-basis: 170px;
   }
   .clients__item:not(:last-child) {
     margin-right: 30px;
