--- a/scss/loyauts/_header.scss
+++ b/scss/loyauts/_header.scss
@@ -171,7 +171,7 @@
 }
 
 .header__menu-mobile {
-  display: none;
+ 
   position: fixed;
   width: 100%;
   height: 100%;
@@ -181,18 +181,14 @@
   flex-direction: column;
   background-color: var(--main-bg-cl);
   z-index: 10;
-  overflow-y: scroll;
+  transform: translateX(100%);
+  transition: transform var(--hover-anim);
+  display: flex;
 
   &.is-open {
-    display: flex;
-  }
-
-  @include mq(tablet-only) {
-    display: none;
-  }
-  @include mq(desktop) {
-    display: none;
-  }
+    transform: translateX(0);
+     }
+  
 }
 .header__menu-link .icon_menu {
   display: none;
