--- a/scss/loyauts/_main-page-1.scss
+++ b/scss/loyauts/_main-page-1.scss
@@ -60,8 +60,9 @@
   margin-right: auto;
 
   @include mq(not-desktop) {
-    width: 360px;
-    height: 84px;
+    width: 100%;
+    max-width: 360px;
+    
     font-size: 26px;
     line-height: 1.62;
   }
@@ -293,11 +294,43 @@
 }
 
 .clients__list {
-  display: flex;
-  flex-wrap: wrap;
-}
-.clients__item {
+     @media screen and (min-width: 320px) and (max-width: 479px) {
+display: flex;
+flex-direction: column;
+   }
+
   @include mq(mobile-only) {
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+    justify-content: center;
+    
+  }
+
+  @include mq(tablet-only) {
+   display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+    justify-content: center;
+  }
+  @include mq(desktop) {
+    display: flex;
+        flex-wrap: wrap;
+    align-items: center;
+    justify-content: center;
+  }
+}
+
+.clients__item {
+  @media screen and (min-width: 320px) and (max-width: 479px){
+    width: 210px;
+    
+    &:not(:last-child) {
+      margin-bottom: 30px;
+    }
+  }
+   
+  @media screen and (min-width: 480px) and (max-width: 767px) {
     width: 210px;
     &:not(:nth-child(2n)) {
       margin-right: 30px;
@@ -307,18 +340,29 @@
     }
   }
 
-  @include mq(tablet) {
+  @include mq(tablet-only) {
     width: 226px;
-    &:not(:nth-child(3n)) {
+
+    &:nth-child(-n + 3) {
+      margin-bottom: 30px;
+    }
+    &:nth-child(1) {
       margin-right: 30px;
     }
-    &:nth-child(3n) {
-      margin-bottom: 30px;
+    &:nth-child(2) {
+      margin-right: 30px;
+    }
+    &:nth-child(4) {
+      margin-right: 30px;
+    }
+    &:nth-child(5) {
+      margin-right: 30px;
     }
   }
 
   @include mq(desktop) {
-    width: 170px;
+    flex-basis: 170px;
+
     &:not(:last-child) {
       margin-right: 30px;
     }
