--- a/scss/loyauts/_main-page-1.scss
+++ b/scss/loyauts/_main-page-1.scss
@@ -179,7 +179,7 @@
   background-color: var(--our-team-color);
 
   @include mq(mobile-only) {
-    width: 100%;
+    width: 450px;
     &:not(:last-child) {
       margin-bottom: 30px;
     }
@@ -194,6 +194,7 @@
     }
   }
   @include mq(desktop) {
+    width: 270px;
     &:not(:last-child) {
       margin-right: 30px;
     }
