--- a/css/main.css
+++ b/css/main.css
@@ -58,6 +58,8 @@ p {
 
 img {
   display: block;
+  width: 100%;
+  height: auto;
 }
 
 .container {
@@ -331,8 +333,6 @@ img {
   .logo--blue {
     font-size: 24px;
     line-height: 1.16;
-    padding-top: 24px;
-    padding-bottom: 24px;
   }
 }
 
@@ -611,6 +611,9 @@ img {
     display: -ms-flexbox;
     display: flex;
     margin-left: 88px;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
   }
 }
 
@@ -691,6 +694,13 @@ img {
 @media screen and (min-width: 1200px) {
   .header__contact:first-child {
     margin-right: 30px;
+  }
+}
+
+@media screen and (max-width: 1199.98px) {
+  .header__link {
+    padding-top: 32px;
+    padding-bottom: 32px;
   }
 }
 
@@ -1163,7 +1173,7 @@ img {
 
 @media screen and (max-width: 767.98px) {
   .our-team__item {
-    width: 100%;
+    width: 450px;
   }
   .our-team__item:not(:last-child) {
     margin-bottom: 30px;
@@ -1183,6 +1193,9 @@ img {
 }
 
 @media screen and (min-width: 1200px) {
+  .our-team__item {
+    width: 270px;
+  }
   .our-team__item:not(:last-child) {
     margin-right: 30px;
   }
