--- a/css/main.css
+++ b/css/main.css
@@ -1173,7 +1173,7 @@ img {
 
 @media screen and (max-width: 767.98px) {
   .our-team__item {
-    width: 450px;
+    width: 100%;
   }
   .our-team__item:not(:last-child) {
     margin-bottom: 30px;
