--- a/scss/loyauts/_main-page-1.scss
+++ b/scss/loyauts/_main-page-1.scss
@@ -179,7 +179,7 @@
   background-color: var(--our-team-color);
 
   @include mq(mobile-only) {
-    width: 450px;
+    width: 100%;
     &:not(:last-child) {
       margin-bottom: 30px;
     }
