--- a/scss/loyauts/_header.scss
+++ b/scss/loyauts/_header.scss
@@ -11,7 +11,6 @@
 }
 
 .header__navigation {
-
   @include mq(mobile-only) {
     display: none;
   }
@@ -28,9 +27,7 @@
 }
 
 .header__logo-studio {
-      color: var(--color-logo);
-
-   
+  color: var(--color-logo);
 }
 .header__list {
   font-family: var(--main-font);
@@ -61,7 +58,7 @@
       background-color: var(--accent-color);
       border-radius: 2px;
       left: 0;
-      bottom: -32px;
+      bottom: 0;
     }
   }
 
@@ -90,7 +87,6 @@
   }
 }
 .header__link {
-
   @include mq(not-desktop) {
     padding-top: 32px;
     padding-bottom: 32px;
@@ -168,6 +164,8 @@
   height: 40px;
   z-index: 100;
   color: var(--color-logo);
+  padding-top: 10px;
+  padding-bottom: 10px;
   &:hover,
   &:focus {
     color: var(--accent-color);
@@ -182,7 +180,6 @@
 }
 
 .header__menu-mobile {
- 
   position: fixed;
   width: 100%;
   height: 100%;
@@ -198,8 +195,7 @@
 
   &.is-open {
     transform: translateX(0);
-     }
-  
+  }
 }
 .header__menu-link .icon_menu {
   display: none;
