--- a/scss/components/_logo.scss
+++ b/scss/components/_logo.scss
@@ -9,6 +9,8 @@
   @include mq(not-desktop) {
     font-size: 24px;
     line-height: 1.16;
+    padding-top: 16px;
+    padding-bottom: 16px;
     
   }
   @include mq(desktop) {
