--- a/css/main.css
+++ b/css/main.css
@@ -492,7 +492,19 @@ img {
   margin-bottom: 30px;
 }
 
-@media screen and (max-width: 1199.98px) {
+@media screen and (max-width: 320px) {
+  .modal-form__radio {
+    font-size: 9px;
+  }
+}
+
+@media screen and (min-width: 480px) {
+  .modal-form__radio {
+    font-size: 12px;
+  }
+}
+
+@media screen and (min-width: 768px) and (max-width: 1199.98px) {
   .modal-form__radio {
     font-size: 12px;
     line-height: 1.16;
